# tensormet

./: .gitignore  README.md  pyproject.toml
0_debug/: sc_debug.ipynb
0_old/data/: runs.jsonl
0_preliminary_experiments/: TensorTests.ipynb  cleanup_tensors.py  inflection retrieval.ipynb  pyTensorlab.ipynb
2_decomposition/: Checkpoint.ipynb  Tensor decomposition.ipynb  Tensor iteration.ipynb  old_tensor_iteration.py  sii_decomposition.py  sparse_decomposition.ipynb  sparse_iteration.ipynb  tensor_decomposition.py
3_representation/: Associated Dimensions.ipynb  MIP.ipynb  Metaphor recognition.ipynb  Probabilistic role vector.ipynb  Sentence representation.ipynb  Vector addition-multiplication.ipynb  expected role vector.ipynb  tucker_extension.py
4_application/: Association strength.ipynb  Dimension constraining.ipynb  GPT constraining.ipynb  gpt_constraining.py
5_analysis/: error_analysis.ipynb
6_sparsity_development/: 0 Understanding Tensorly - Cupy.ipynb  1. Cupy Dot Product.ipynb  2.1 Cupy Sparse Iteration.ipynb  2.2 Dense Iteration.ipynb  3 Cupy Bitlimit.ipynb  4 Error analysis.ipynb  5 Sparse-dense comparison.ipynb  6 Sentence Similarity and Parameters.ipynb  cupy_nnt.py  cupy_nnt_original.py  cupy_nnt_sim.py
7_KL_development/: 2026-02 Avoiding Z FR.ipynb  2026-02 Avoiding Z KL.ipynb  KL divergence in updates.ipynb  clean_run.py  integrated_iteration.py  quick.ipynb  simple_kl.py
9_hpc/: 2_sparse_population.py  3_tensor_decomposition.py  4_config_based_launch.py  job_script_decomp_tier1.sh  quick.py
sample_data/: 3D_20000d_shared12.pkl
(+187 files in other folders)
